add airport data citation

--- a/notebooks/02-geopark-pandas-empty.ipynb
+++ b/notebooks/02-geopark-pandas-empty.ipynb
@@ -2,6 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Ek5dz53Uqj9i"
+      },
       "source": [
         "# Pandas Dataframes\n",
         "\n",
@@ -10,10 +13,7 @@
         "Read more about working with `pandas` dataframes in our open [Earth Data Science textbook](https://www.earthdatascience.org/courses/intro-to-earth-data-science/scientific-data-structures-python/pandas-dataframes/).\n",
         "\n",
         "The [documentation](https://pandas.pydata.org/docs/user_guide/index.html) for the `pandas` library may also be useful."
-      ],
-      "metadata": {
-        "id": "Ek5dz53Uqj9i"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -37,7 +37,8 @@
       },
       "outputs": [],
       "source": [
-        "# Open Colombia airports .csv\n",
+        "# Open Colombia airports .csv \n",
+        "# Data are from: https://ourairports.com/countries/CO/\n",
         "\n",
         "# Define url\n",
         "col_airports_url = \"https://ourairports.com/countries/CO/airports.csv\"\n",
@@ -113,14 +114,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Use .crosstab() function to return counts of specified variables\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "MzatpDZTzFBd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Use .crosstab() function to return counts of specified variables\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -138,36 +139,36 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# How many airports above 5280' (1 mile = elevation of Denver, Colorado)?\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "CE-5kzm0vilL"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# How many airports above 5280' (1 mile = elevation of Denver, Colorado)?\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# How many medium-sized airports?\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cgrS6xY2y-yt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# How many medium-sized airports?\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# How many heliports?\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "-btaSrpI1Lhg"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# How many heliports?\n"
+      ]
     },
     {
       "cell_type": "markdown",
