add airport data citation

--- a/notebooks/02-geopark-pandas-solutions.ipynb
+++ b/notebooks/02-geopark-pandas-solutions.ipynb
@@ -264,6 +264,7 @@
       ],
       "source": [
         "# Open Colombia airports .csv\n",
+        "# Data are from: https://ourairports.com/countries/CO/\n",
         "\n",
         "# Define url\n",
         "col_airports_url = \"https://ourairports.com/countries/CO/airports.csv\"\n",
